:memo: Docs: Theme description, /style.css

--- a/wp-content/themes/dominium/style.css
+++ b/wp-content/themes/dominium/style.css
@@ -1,3 +1,6 @@
 /* 
 Theme Name: Colegio Dominium
+Author: Nordev
+Description: Tema desenvolvido por Daniel Moura, Rafael Lima e Rita Kassiane.
+Version: 1.0 
 */
